force-app/main/default/objects/Dev_Form_Questions__c/Dev_Form_Questions__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing :</description>
    <label>Dev Form Questions</label>
    <nameField>
        <displayFormat>DSQN-{00000}</displayFormat>
        <label>QuestionID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev Form Question</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>