force-app/main/default/objects/Dev_Form_Questions__c/fields/Answer_Options__c.field-meta.xml
<CustomField>
    <fullName>Answer_Options__c</fullName>
    <label>Answer Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>