force-app/main/default/objects/Dev_Form_Questions__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Captures the dates of the different versions of a Form Question</description>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>