force-app/main/default/objects/Dev_Form_Questions__c/fields/Dev_Form__c.field-meta.xml
<CustomField>
    <fullName>Dev_Form__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dev Form</label>
    <referenceTo>Dev_Forms__c</referenceTo>
    <relationshipLabel>Dev Form Question</relationshipLabel>
    <relationshipName>Dev_Survey_Question1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>