force-app/main/default/objects/Dev_Form_Questions__c/fields/isRequired__c.field-meta.xml
<CustomField>
    <fullName>isRequired__c</fullName>
    <label>isRequired</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>