force-app/main/default/objects/Dev_Form_Questions__c/fields/Question_ID__c.field-meta.xml
<CustomField>
    <fullName>Question_ID__c</fullName>
    <description>Form Question ID obtained from the DevZone API to be used for comparison by Mulesoft in order to reference a question in a given form</description>
    <label>Question ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>