force-app/main/default/objects/Dev_Form_Questions__c/fields/Question_Text_Full__c.field-meta.xml
<CustomField>
    <fullName>Question_Text_Full__c</fullName>
    <label>Question Text(Full)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>