force-app/main/default/objects/Dev_Form_Questions__c/fields/Question_Text_Limited__c.field-meta.xml
<CustomField>
    <fullName>Question_Text_Limited__c</fullName>
    <label>Question Text(Limited)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>