force-app/main/default/objects/Dev_Form_Questions__c/fields/Question_type__c.field-meta.xml
<CustomField>
    <fullName>Question_type__c</fullName>
    <label>Question type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multiple Choice Single Value</fullName>
            </value>
            <value>
                <fullName>Multiple Choice Multiple Values</fullName>
            </value>
            <value>
                <fullName>Rating Scale</fullName>
            </value>
            <value>
                <fullName>Ranking</fullName>
            </value>
            <value>
                <fullName>Short Text</fullName>
            </value>
            <value>
                <fullName>Long Text</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>