force-app/main/default/objects/Dev_Form_Questions__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Captures the version number of a Form Question</description>
    <label>Version</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>